Bindings error message for missing required dictionary member should be more explicit https://bugs.webkit.org/show_bug.cgi?id=163665

Reviewed by Darin Adler.

Source/WebCore:

Add throwRequiredMemberTypeError function to throw a TypeError exception with an error
message indicating the missing required member.

No new test required, rebase existing tests.

* bindings/js/JSDOMBinding.cpp:
(WebCore::throwRequiredMemberTypeError):
* bindings/js/JSDOMBinding.h:
* bindings/scripts/CodeGeneratorJS.pm:
(GenerateDictionaryImplementationContent):
* bindings/scripts/test/JS/JSTestObj.cpp:
(WebCore::convertDictionary<TestObj::DictionaryThatShouldNotTolerateNull>):

LayoutTests:

Update existing tests.

* fast/mediastream/MediaStreamTrackEvent-constructor-expected.txt:


Canonical link: https://commits.webkit.org/181589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207711 268f45cc-cd09-0410-ab3c-d52691b4dbfc